php.net |  support |  documentation |  report a bug |  advanced search |  search howto |  statistics |  random bug |  login
Bug #40009 http_build_query(array()) returns NULL, not empty string
Submitted: 2007-01-03 11:24 UTC Modified: 2007-01-03 23:17 UTC
From: bugs dot php dot net at chsc dot dk Assigned:
Status: Closed Package: URL related
PHP Version: 5.2.0 OS: Windows
Private report: No CVE-ID: None
 [2007-01-03 11:24 UTC] bugs dot php dot net at chsc dot dk
Description:
------------
http_build_query(array()) returns NULL. According to the documentation, the return type of http_build_query is string.

This can be considered a documentation problem, but I think it would be better to change the function so that it always returns a string.

Reproduce code:
---------------
./php.exe -r "echo gettype(http_build_query(array()));"



Expected result:
----------------
string


Actual result:
--------------
NULL

Patches

Pull Requests

History

AllCommentsChangesGit/SVN commitsRelated reports
 [2007-01-03 23:17 UTC] iliaa@php.net
This bug has been fixed in CVS.

Snapshots of the sources are packaged every three hours; this change
will be in the next snapshot. You can grab the snapshot at
http://snaps.php.net/.
 
Thank you for the report, and for helping us make PHP better.


 
PHP Copyright © 2001-2026 The PHP Group
All rights reserved.
Last updated: Fri Sep 25 16:00:02 2026 UTC