Fixed bug #40009 (http_build_query(array()) returns NULL).